[package]
authors = ["YUUKIToriyama<github@toriyama.dev>"]
description = "Draw julia set on CanvasElement"
edition = "2021"
license = "MIT"
name = "draw-julia"
readme = "README.md"
repository = "https://github.com/YUUKIToriyama/draw-julia"
version = "0.3.2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.59"
serde = {version = "1.0.143", features = ["derive"]}
wasm-bindgen = {version = "0.2.82", features = ["serde-serialize"]}
web-sys = {version = "0.3.59", features = ["CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement"]}
