[package]
authors = ["YUUKIToriyama<github@toriyama.dev>"]
description = "Draw julia set on CanvasElement"
edition = "2021"
license = "MIT"
name = "draw-julia"
readme = "README.md"
repository = "https://github.com/YUUKIToriyama/draw-julia"
version = "0.4.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "draw_julia"
path = "src/lib.rs"

[[bin]]
name = "draw_julia_cli"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
image = "0.24.4"
js-sys = "0.3.59"
serde = {version = "1.0.143", features = ["derive"]}
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = {version = "0.2.82"}

[dependencies.web-sys]
version = "0.3.59"
features = ["CanvasRenderingContext2d", "ImageData", "HtmlCanvasElement"]
